# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  pyproject.toml.save  pyproject.toml.save.1  setup.config
.github/workflows/: check.yml  my-check.yml
page_analyzer/: app.py  app.py.save  app.py.save.1  url_validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
tests/: conftest.py  test_add_url.py  test_check_url.py  test_index.py  test_url.py  test_url_parser.py  test_urls.py
