[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "web application"
authors = ["Korolkov Dmitriy <korolkovpro@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
