[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "web application"
authors = ["Korolkov Dmitriy <korolkovpro@yandex.ru>"]
readme = "README.md"
packages = [{ include = "hexlet_code" }]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^0.21.1"
validators = "^0.20.0"
requests = "^2.29.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
